# solana-setup-action

./: .gitignore  LICENSE  README.md  action.yml
.github/workflows/: anchor.yml  bpf-test.yml  simple.yml
tests/anchor/: Anchor.toml  package.json
tests/anchor/keys/: admin.json
tests/anchor/programs/basic/: Cargo.toml
tests/anchor/programs/basic/src/: lib.rs
tests/anchor/tests/: anchor_basic.js
tests/test-bpf/: Cargo.toml
tests/test-bpf/src/: lib.rs
tests/test-bpf/tests/: integration.rs
