[package]
name = "bpf-test-simple"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
solana-program = "=1.16.18"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-logger = "=1.16.18"
solana-program-test = "=1.16.18"
solana-sdk = "=1.16.18"
solana-validator = "=1.16.18"

[lib]
crate-type = ["cdylib", "lib"]
