[package]
name = "basic"
version = "0.1.0"
description = "Created with Anchor"
rust-version = "1.68.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "basic"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[patch.crates-io]
solana_rbpf = { git = "https://github.com/solana-labs/rbpf", tag = "v0.8.0" }

[dependencies]
anchor-lang = "0.29.0"
ahash = "=0.8.5"
